[fix] accidentally cropped out curly bracket

--- a/app/assets/stylesheets/global.css
+++ b/app/assets/stylesheets/global.css
@@ -199,3 +199,5 @@ footer a:hover {
   background: white;
   background: rgba(255,255,255,0.8);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 5px;
+}
